<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Scoring" >
	<LinearLayout
		android:id="@+id/bottom_buttons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="vertical">
		<!-- Row of scoring inputs -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView 
				style="@style/ScoreInput"
				android:onClick="clickLeftInput"
				android:id="@+id/left_score_input"/>
			<Button 
				android:id="@+id/button_go"
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="0.3"
				android:text="@string/undo"
				android:gravity="center"
				android:onClick="clickGoUndo"
				android:textSize="@dimen/standard_button_text_size"/>
			<TextView 
				style="@style/ScoreInput"
				android:onClick="clickRightInput"
				android:id="@+id/right_score_input"/>
		</LinearLayout>
		<!-- Top row of buttons -->
		<LinearLayout
			style="@style/ScoreButtonRow">
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click1"
				android:text="@string/label_1"
				android:id="@+id/add_1"/>
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click2"
				android:text="@string/label_2"
				android:id="@+id/add_2"/>
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click3"
				android:text="@string/label_3"
				android:id="@+id/add_3"/>
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click4"
				android:text="@string/label_4"
				android:id="@+id/add_4"/>
		</LinearLayout>
		<!-- Middle row of buttons -->
		<LinearLayout
			style="@style/ScoreButtonRow">
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click5"
				android:text="@string/label_5"
				android:id="@+id/add_5"/>
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click6"
				android:text="@string/label_6"
				android:id="@+id/add_6"/>
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click7"
				android:text="@string/label_7"
				android:id="@+id/add_7"/>
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click8"
				android:text="@string/label_8"
				android:id="@+id/add_8"/>
		</LinearLayout>
		<!-- Bottom row of buttons -->
		<LinearLayout
			style="@style/ScoreButtonRow">
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="clickMinus"
				android:text="@string/label_minus"
				android:id="@+id/minus"/>
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click9"
				android:text="@string/label_9"
				android:id="@+id/add_9"/>
			<Button
				style="@style/ScoreInputButton" 
				android:onClick="click0"
				android:text="@string/label_0"
				android:id="@+id/add_0"/>
			<ImageButton
				style="@style/ScoreInputButton"
				android:onClick="clickDelete"
				android:contentDescription="@string/description_delete"
				android:scaleType="centerCrop"
				android:src="@drawable/delete_icon"
				android:id="@+id/delete"/>
		</LinearLayout>
	</LinearLayout>
	<!--  Container for the top portion of the screen - scores, foul buttons, names -->
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:layout_above="@id/bottom_buttons">
		<!-- Chop the screen into two halves, for the left and right teams -->
		<LinearLayout
			android:orientation="vertical"
			style="@style/HalfContainer">
			<TextView 
				style="@style/TeamNameAndScore"
				android:id="@+id/team_0_name"/>
			<TextView 
				style="@style/TeamNameAndScore"
				android:id="@+id/team_0_total"/>
			<!-- This container is for the fouls and scores, and we'll again chop it in half -->
			<LinearLayout 
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">
				<LinearLayout 
					android:orientation="vertical"
					style="@style/HalfContainer">
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam0Foul0"
						android:id="@+id/team_0_foul_0"/>
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam0Foul1"
						android:id="@+id/team_0_foul_1"/>
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam0Foul2"
						android:id="@+id/team_0_foul_2"/>
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam0Foul3"
						android:id="@+id/team_0_foul_3"/>
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam0Foul4"
						android:id="@+id/team_0_foul_4"/>
				</LinearLayout>
				<ScrollView
					android:id="@+id/team_0_scroll"
					style="@style/HalfContainer">
					<LinearLayout 
						android:id="@+id/team_0_scores"
						style="@style/ScoreContainer"
						android:orientation="vertical"/>
				</ScrollView>
			</LinearLayout>
		</LinearLayout>
		<!-- This is the other half of the main part of the screen -->
		<LinearLayout
			android:orientation="vertical"
			style="@style/HalfContainer">
			<TextView 
				style="@style/TeamNameAndScore"
				android:id="@+id/team_1_name"/>
			<TextView 
				style="@style/TeamNameAndScore"
				android:id="@+id/team_1_total"/>
			<!-- This container is for the fouls and scores, and we'll again chop it in half -->
			<LinearLayout 
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">
				<ScrollView
					android:id="@+id/team_1_scroll"
					style="@style/HalfContainer">
					<LinearLayout 
						android:id="@+id/team_1_scores"
						style="@style/ScoreContainer"
						android:orientation="vertical"/>
				</ScrollView>
				<LinearLayout 
					android:orientation="vertical"
					style="@style/HalfContainer">
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam1Foul0"
						android:id="@+id/team_1_foul_0"/>
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam1Foul1"
						android:id="@+id/team_1_foul_1"/>
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam1Foul2"
						android:id="@+id/team_1_foul_2"/>
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam1Foul3"
						android:id="@+id/team_1_foul_3"/>
					<com.houseofslack.widget.FoulImageView
						style="@style/FoulImage"
						android:onClick="clickTeam1Foul4"
						android:id="@+id/team_1_foul_4"/>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
